A major refactoring of the drjava portion of the code base.  Eliminated the distinction between INavigatorItem and OpenDefinitionsDocument. Revised the synchronization scheme for junit testing.
git-svn-id: file:///tmp/test-svn/trunk@3017 fe72c1cf-3628-48e9-8b72-1c46755d3cff